# korgs-program-library

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
clients/rust/pinocchio_counter_client/: Cargo.toml
clients/rust/pinocchio_counter_client/src/: lib.rs
clients/rust/pinocchio_counter_client/src/instructions/: create_counter_v1.rs  create_counter_v1_ix.rs  deactivate_counter_v1_ix.rs  decrement_count_v1_ix.rs  increment_count_v1_ix.rs  initialize_counter_v1_ix.rs  mod.rs  reactivate_counter_v1_ix.rs  set_count_v1_ix.rs
clients/rust/pinocchio_counter_client/src/transactions/: create_counter_v1_tx.rs  deactivate_counter_v1_tx.rs  decrement_count_v1_tx.rs  delete_counter_v1_tx.rs  increment_count_v1_tx.rs  initialize_counter_v1_tx.rs  mod.rs  reactivate_counter_v1_tx.rs  set_count_v1_tx.rs
clients/rust/pinocchio_sol_vault_client/: Cargo.toml
clients/rust/pinocchio_sol_vault_client/src/: lib.rs
clients/rust/pinocchio_sol_vault_client/src/instructions/: deactivate_vault_v1_ix.rs  deposit_v1_ix.rs  initialize_vault_v1_ix.rs  mod.rs  reactivate_vault_v1_ix.rs  withdraw_v1_ix.rs
clients/rust/pinocchio_sol_vault_client/src/transactions/: deactivate_vault_v1_tx.rs  deposit_v1_tx.rs  initialize_vault_v1_tx.rs  mod.rs  reactivate_vault_v1_tx.rs  withdraw_v1_tx.rs
programs/pinocchio_counter/: Cargo.toml
programs/pinocchio_counter/src/: entrypoint.rs  lib.rs
programs/pinocchio_counter/src/instructions/: create_counter_v1.rs  discriminator.rs
programs/pinocchio_counter_program/: Cargo.toml
programs/pinocchio_counter_program/src/: account_discriminator.rs  entrypoint.rs  error.rs  instructions_discriminator.rs  lib.rs  state.rs
programs/pinocchio_counter_program/src/instructions/: create_counter_v1.rs  deactivate_counter_v1.rs  decrement_count_v1.rs  discriminator.rs  increment_count_v1.rs  initialize_counter_v1.rs  mod.rs  reactivate_counter_v1.rs  set_count_v1.rs
programs/pinocchio_sol_vault_program/: Cargo.toml
programs/pinocchio_sol_vault_program/src/: account_discriminator.rs  entrypoint.rs  error.rs  instructions_discriminator.rs  lib.rs  state.rs
programs/pinocchio_sol_vault_program/src/instructions/: deactivate_vault_v1.rs  deposit_v1.rs  initialize_vault_v1.rs  mod.rs  reactivate_vault_v1.rs  withdraw_v1.rs
scripts/: build-pinocchio-counter  build-pinocchio-sol-vault  check-env  env.sh  lint  polish  pre-push  setup-env  teardown-env  test-pinocchio-counter  test-pinocchio-sol-vault  verify
tests/: Cargo.toml  clock_utils.rs  lib.rs  litesvm_utils.rs  malicious_builders.rs  pinocchio_counter_tests.rs
tests/formal-verification-tests/: Cargo.toml  build.rs  lib.rs
tests/formal-verification-tests/pinocchio_counter/: mod.rs
tests/formal-verification-tests/pinocchio_sol_vault/: mod.rs
tests/fuzz-tests/: Cargo.toml  lib.rs
tests/fuzz-tests/pinocchio_counter/: mod.rs
tests/fuzz-tests/pinocchio_sol_vault/: mod.rs
tests/integration-tests/: Cargo.toml  lib.rs
tests/integration-tests/pinocchio_counter/: deactivate_counter_v1.rs  decrement_count_v1.rs  increment_count_v1.rs  initialize_counter_v1.rs  mod.rs  reactivate_counter_v1.rs  set_count_v1.rs
tests/integration-tests/pinocchio_counter/malicious_builders/: decrement_count_v1.rs  increment_count_v1.rs  initialize_counter_v1.rs  mod.rs  reactivate_counter_v1.rs
tests/integration-tests/pinocchio_sol_vault/: deactivate_vault_v1.rs  deposit_v1.rs  initialize_vault_v1.rs  mod.rs  reactivate_vault_v1.rs  withdraw_v1.rs
tests/integration-tests/pinocchio_sol_vault/malicious_builders/: deactivate_vault_v1.rs  deposit_v1.rs  initialize_vault_v1.rs  mod.rs  reactivate_vault_v1.rs  withdraw_v1.rs
tests/pinocchio_counter/: deactivate_counter_v1.rs  decrement_count_v1.rs  increment_count_v1.rs  initialize_counter_v1.rs  mod.rs  set_count_v1.rs
tests/pinocchio_counter/malicious_builders/: deactivate_counter_v1.rs  initialize_counter_v1.rs  mod.rs  set_count_v1.rs
