[workspace]
members = ["clients/rust/*", "programs/*", "tests"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
pinocchio_counter_program = { path = "programs/pinocchio_counter_program" }
pinocchio_counter_client = { path = "clients/rust/pinocchio_counter_client" }

litesvm = "0.8.2"
pinocchio = "0.9.2"
pinocchio-system = "0.4.0"
solana-instruction = "3.0"
solana-keypair = "3.0"
solana-pubkey = "3.0"
thiserror = { version = "2.0.17", default-features = false }
wincode = "0.2.5"
