[workspace]
members = [
    "clients/rust/*",
    "programs/*",
    "tests/formal-verification-tests",
    "tests/fuzz-tests",
    "tests/integration-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
similar_names = "allow"

[workspace.dependencies]
pinocchio_counter_program = { path = "programs/pinocchio_counter_program" }
pinocchio_counter_client = { path = "clients/rust/pinocchio_counter_client" }

# DO NOT ADD kani here. The crate is a useless placeholder.
bolero = "0.13.4"
litesvm = "0.8.2"
pinocchio = "0.9.2"
pinocchio-system = "0.4.0"
solana-account = "3.0"
solana-clock = "3.0"
solana-hash = "3.0"
solana-instruction = "3.0"
solana-keypair = "3.0"
solana-message = "3.0"
solana-pubkey = "3.0"
solana-rent = "3.0"
solana-sanitize = "3.0"
solana-signature = "3.0"
solana-system-program = "3.0"
solana-transaction = "3.0"
thiserror = { version = "2.0.17", default-features = false }
wincode = "0.2.5"
