[package]
name = "pinocchio_counter"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dependencies]
pinocchio = { workspace = true }
