[package]
name = "formal-verification-tests"
version = { workspace = true }
edition = { workspace = true }
build = "build.rs"

[lib]
path = "lib.rs"

[dependencies]
# DO NOT ADD kani here. The crate is a useless placeholder.
pinocchio_counter_program = { workspace = true, features = ["no-entrypoint"] }
pinocchio_sol_vault_program = { workspace = true, features = ["no-entrypoint"] }
pinocchio = { workspace = true }
