[package]
name = "fuzz-tests"
version = { workspace = true }
edition = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
bolero = { workspace = true }
pinocchio = { workspace = true }
pinocchio_counter_program = { workspace = true, features = ["no-entrypoint"] }
pinocchio_sol_vault_program = { workspace = true, features = ["no-entrypoint"] }
wincode = { workspace = true }