[package]
name = "integration-tests"
version = { workspace = true }
edition = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
litesvm = { workspace = true }
pinocchio_counter_client = { workspace = true }
pinocchio_counter_program = { workspace = true, features = ["no-entrypoint"] }
pinocchio_sol_vault_client = { workspace = true }
pinocchio_sol_vault_program = { workspace = true, features = ["no-entrypoint"] }
solana-account = { workspace = true }
solana-clock = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-system-program = { workspace = true }
solana-transaction = { workspace = true }
thiserror = { workspace = true }
