[package]
name = "pinocchio_sol_vault_client"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
pinocchio_sol_vault_program = { workspace = true, features = ["no-entrypoint"] }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true, features = ["curve25519"] }
solana-sanitize = { workspace = true }
solana-signature = { workspace = true }
solana-system-program = { workspace = true }
solana-transaction = { workspace = true, features = ["bincode"] }
thiserror = { workspace = true }
